{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 337,
  "lineage": "8ffa3f45-af3b-7d70-e188-d070fba5847c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "terraform_alb_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:637423319211:loadbalancer/app/terraform-alb-01/ae10eed8bf7d3b74",
            "arn_suffix": "app/terraform-alb-01/ae10eed8bf7d3b74",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-alb-01-163394127.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:637423319211:loadbalancer/app/terraform-alb-01/ae10eed8bf7d3b74",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-alb-01",
            "preserve_host_header": false,
            "security_groups": [
              "sg-089f8c4abb68b7214"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0707679a1c8785c2f"
              },
              {
                "subnet_id": "subnet-097bdbc3925776ff1"
              },
              {
                "subnet_id": "subnet-0ce6e3136e4564c2d"
              }
            ],
            "subnets": [
              "subnet-0707679a1c8785c2f",
              "subnet-097bdbc3925776ff1",
              "subnet-0ce6e3136e4564c2d"
            ],
            "tags": {
              "Project": "terraform_sodba_01"
            },
            "tags_all": {
              "Project": "terraform_sodba_01"
            },
            "vpc_id": "vpc-021ccfd4b5b8ccedc",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.terraform_sg_01",
            "aws_subnet.private_subnets",
            "aws_vpc.terraform_vpc_01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "terraform_listener_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:637423319211:listener/app/terraform-alb-01/ae10eed8bf7d3b74/66a92ef57c7a3017",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:637423319211:targetgroup/http/ecbe9faee8bf6025",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:637423319211:listener/app/terraform-alb-01/ae10eed8bf7d3b74/66a92ef57c7a3017",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:637423319211:loadbalancer/app/terraform-alb-01/ae10eed8bf7d3b74",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.terraform_alb_01",
            "aws_alb_target_group.terraform_tg_01",
            "aws_security_group.terraform_sg_01",
            "aws_subnet.private_subnets",
            "aws_vpc.terraform_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "terraform_tg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:637423319211:targetgroup/http/ecbe9faee8bf6025",
            "arn_suffix": "targetgroup/http/ecbe9faee8bf6025",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:637423319211:targetgroup/http/ecbe9faee8bf6025",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:637423319211:loadbalancer/app/terraform-alb-01/ae10eed8bf7d3b74"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "http",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-021ccfd4b5b8ccedc"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc_01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_instance_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f12ae727bb56d85",
            "arn": "arn:aws:ec2:eu-west-3:637423319211:instance/i-0daf0a8027cbaf0ad",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0daf0a8027cbaf0ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sodbaveKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0176d05bdf7edc439",
            "private_dns": "ip-10-0-1-16.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.16",
            "public_ip": "13.38.109.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b18ea13e87759bc0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066f97e846babd31f",
            "tags": {
              "Name": "terraform_instance_01",
              "Project": "terraform_sodba_01"
            },
            "tags_all": {
              "Name": "terraform_instance_01",
              "Project": "terraform_sodba_01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-089f8c4abb68b7214"
            ]
          },
          "dependencies": [
            "aws_security_group.terraform_sg_01",
            "aws_subnet.public_subnets",
            "aws_vpc.terraform_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_igw_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423319211:internet-gateway/igw-00ffeed697cfec81a",
            "id": "igw-00ffeed697cfec81a",
            "owner_id": "637423319211",
            "tags": {
              "Name": "terraform_igw_01",
              "Project": "terraform_sodba_01"
            },
            "tags_all": {
              "Name": "terraform_igw_01",
              "Project": "terraform_sodba_01"
            },
            "vpc_id": "vpc-021ccfd4b5b8ccedc"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_public_rt_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423319211:route-table/rtb-010d1e0c43fee284e",
            "id": "rtb-010d1e0c43fee284e",
            "owner_id": "637423319211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ffeed697cfec81a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_public_rt_01",
              "Project": "terraform_sodba_01"
            },
            "tags_all": {
              "Name": "terraform_public_rt_01",
              "Project": "terraform_sodba_01"
            },
            "timeouts": null,
            "vpc_id": "vpc-021ccfd4b5b8ccedc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_igw_01",
            "aws_vpc.terraform_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025df4a20054982e1",
            "route_table_id": "rtb-010d1e0c43fee284e",
            "subnet_id": "subnet-066f97e846babd31f"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw_01",
            "aws_route_table.terraform_public_rt_01",
            "aws_subnet.public_subnets",
            "aws_vpc.terraform_vpc_01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065b83647d604f155",
            "route_table_id": "rtb-010d1e0c43fee284e",
            "subnet_id": "subnet-0b5ee5690e8e48238"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw_01",
            "aws_route_table.terraform_public_rt_01",
            "aws_subnet.public_subnets",
            "aws_vpc.terraform_vpc_01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba115752844d6223",
            "route_table_id": "rtb-010d1e0c43fee284e",
            "subnet_id": "subnet-0e0330381fb24cd26"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_igw_01",
            "aws_route_table.terraform_public_rt_01",
            "aws_subnet.public_subnets",
            "aws_vpc.terraform_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_sg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423319211:security-group/sg-089f8c4abb68b7214",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089f8c4abb68b7214",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_sg_01",
            "name_prefix": "",
            "owner_id": "637423319211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "terraform_sodba_01"
            },
            "tags_all": {
              "Project": "terraform_sodba_01"
            },
            "timeouts": null,
            "vpc_id": "vpc-021ccfd4b5b8ccedc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc_01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423319211:subnet/subnet-0707679a1c8785c2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0707679a1c8785c2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423319211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1",
              "Project": "terraform_sodba_01"
            },
            "tags_all": {
              "Name": "private_subnet_1",
              "Project": "terraform_sodba_01"
            },
            "vpc_id": "vpc-021ccfd4b5b8ccedc"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc_01"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423319211:subnet/subnet-097bdbc3925776ff1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097bdbc3925776ff1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423319211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2",
              "Project": "terraform_sodba_01"
            },
            "tags_all": {
              "Name": "private_subnet_2",
              "Project": "terraform_sodba_01"
            },
            "vpc_id": "vpc-021ccfd4b5b8ccedc"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc_01"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423319211:subnet/subnet-0ce6e3136e4564c2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce6e3136e4564c2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423319211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_3",
              "Project": "terraform_sodba_01"
            },
            "tags_all": {
              "Name": "private_subnet_3",
              "Project": "terraform_sodba_01"
            },
            "vpc_id": "vpc-021ccfd4b5b8ccedc"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc_01"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423319211:subnet/subnet-066f97e846babd31f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066f97e846babd31f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423319211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1",
              "Project": "terraform_sodba_01"
            },
            "tags_all": {
              "Name": "public_subnet_1",
              "Project": "terraform_sodba_01"
            },
            "vpc_id": "vpc-021ccfd4b5b8ccedc"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc_01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423319211:subnet/subnet-0b5ee5690e8e48238",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5ee5690e8e48238",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423319211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2",
              "Project": "terraform_sodba_01"
            },
            "tags_all": {
              "Name": "public_subnet_2",
              "Project": "terraform_sodba_01"
            },
            "vpc_id": "vpc-021ccfd4b5b8ccedc"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc_01"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423319211:subnet/subnet-0e0330381fb24cd26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0330381fb24cd26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423319211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_3",
              "Project": "terraform_sodba_01"
            },
            "tags_all": {
              "Name": "public_subnet_3",
              "Project": "terraform_sodba_01"
            },
            "vpc_id": "vpc-021ccfd4b5b8ccedc"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc_01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:637423319211:vpc/vpc-021ccfd4b5b8ccedc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090c6ce4887cdb7c0",
            "default_route_table_id": "rtb-0d98d3a202cd93da6",
            "default_security_group_id": "sg-0b786a9fa8d67b1e5",
            "dhcp_options_id": "dopt-05f37c2994d1affb3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021ccfd4b5b8ccedc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d98d3a202cd93da6",
            "owner_id": "637423319211",
            "tags": {
              "Name": "terraform_vpc_01",
              "Project": "terraform_sodba_01"
            },
            "tags_all": {
              "Name": "terraform_vpc_01",
              "Project": "terraform_sodba_01"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}